--- a/site/themes/inboxr/index.twig
+++ b/site/themes/inboxr/index.twig
@@ -39,7 +39,22 @@
 </head>
 
 <body>
-	<!-- Navigation -->
+	
+    <!-- HEADER -->
+    <header class="header" >
+      <div class="wrapper">
+        <div class="logo">
+          <img src="">
+        </div>
+        <nav>
+          <ul>
+            <li><a href="blog">blog</a><li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- / HEADER -->
+	{# <!-- Navigation -->
 	{% if page_number > 1 %}
     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container-fluid">
@@ -130,6 +145,6 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> #}
 </body>
 </html>
