--- a/site/themes/inboxr/landing.twig
+++ b/site/themes/inboxr/landing.twig
@@ -26,7 +26,7 @@
 	<meta content='{% if meta.img %}{{ meta.img }}{% else %}{{ theme_url }}/images/home-bg.jpg{% endif %}' name='twitter:image'/>
     
     <!-- Custom CSS -->
-    <link href="{{ theme_url }}/css/style.css" rel="stylesheet">
+    <link href="{{ theme_url }}/css/styles.css" rel="stylesheet">
 
     
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -39,11 +39,6 @@
 </head>
 
 <body>
-	
-    <!-- Set your background image for this header on the line below. -->
-    <header class="header" >
-        Header here
-    </header>
 
     <section>
         main bit
