--- a/assets/sass/_colors.scss
+++ b/assets/sass/_colors.scss
@@ -4,44 +4,44 @@ $iui-color-callout: #09c;
 $iui-color-compliment: #ea1;
 $iui-color-constructive: #0ab21b;
 $iui-color-primary: #e21046;
-$iui-color-grayscale: #606060;
+$iui-color-grayscale: #444;
 
 //core
 $iui-color-black: #000;
 $iui-color-white: #fff;
 
 //dark - teir 1
-$iui-color-destructive-dark: mix($iui-color-destructive, $iui-color-black, 10%);
-$iui-color-callout-dark: mix($iui-color-destructive, $iui-color-black, 10%);
-$iui-color-compliment-dark: mix($iui-color-compliment, $iui-color-black, 10%);
-$iui-color-constructive-dark: mix($iui-color-destructive, $iui-color-black, 10%);
-$iui-color-primary-dark: mix($iui-color-primary, $iui-color-black, 10%);
-$iui-color-grayscale-dark: mix($iui-color-grayscale, $iui-color-black, 10%);
+$iui-color-destructive-dark: darken($iui-color-destructive, 20%);
+$iui-color-callout-dark: darken($iui-color-destructive, 20%);
+$iui-color-compliment-dark: darken($iui-color-compliment, 20%);
+$iui-color-constructive-dark: darken($iui-color-destructive, 20%);
+$iui-color-primary-dark: darken($iui-color-primary, 20%);
+$iui-color-grayscale-dark: darken($iui-color-grayscale, 90%);
 
 
 //light - tier 3
-$iui-color-destructive-light: mix($iui-color-destructive, $iui-color-white, 20%);
-$iui-color-callout-light: mix($iui-color-destructive, $iui-color-white, 20%);
-$iui-color-compliment-light: mix($iui-color-compliment, $iui-color-white, 20%);
-$iui-color-constructive-light: mix($iui-color-destructive, $iui-color-white, 20%);
-$iui-color-primary-light: mix($iui-color-primary, $iui-color-white, 20%);
-$iui-color-grayscale-light: mix($iui-color-grayscale, $iui-color-white, 20%);
+$iui-color-destructive-light: lighten($iui-color-destructive, 20%);
+$iui-color-callout-light: lighten($iui-color-destructive, 20%);
+$iui-color-compliment-light: lighten($iui-color-compliment, 20%);
+$iui-color-constructive-light: lighten($iui-color-destructive, 20%);
+$iui-color-primary-light: lighten($iui-color-primary, 30%);
+$iui-color-grayscale-light: lighten($iui-color-grayscale, 25%);
 
 //lighter - tier 4
-$iui-color-destructive-lighter: mix($iui-color-destructive, $iui-color-white, 50%);
-$iui-color-callout-lighter: mix($iui-color-destructive, $iui-color-white, 50%);
-$iui-color-compliment-lighter: mix($iui-color-compliment, $iui-color-white, 50%);
-$iui-color-constructive-lighter: mix($iui-color-destructive, $iui-color-white, 50%);
-$iui-color-primary-lighter: mix($iui-color-primary, $iui-color-white, 50%);
-$iui-color-grayscale-dark: mix($iui-color-grayscale, $iui-color-white, 50%);
+$iui-color-destructive-lighter: lighten($iui-color-destructive, 30%);
+$iui-color-callout-lighter: lighten($iui-color-destructive, 30%);
+$iui-color-compliment-lighter: lighten($iui-color-compliment, 30%);
+$iui-color-constructive-lighter: lighten($iui-color-destructive, 30%);
+$iui-color-primary-lighter: lighten($iui-color-primary, 40%);
+$iui-color-grayscale-lighter: lighten($iui-color-grayscale, 50%);
 
 //lightest - tier 5
-$iui-color-destructive-lightest: mix($iui-color-destructive, $iui-color-white, 80%);
-$iui-color-callout-lightest: mix($iui-color-destructive, $iui-color-white, 50%);
-$iui-color-compliment-lightest: mix($iui-color-compliment, $iui-color-white, 80%);
-$iui-color-constructive-lightest: mix($iui-color-destructive, $iui-color-white, 80%);
-$iui-color-primary-light: mix($iui-color-primary, $iui-color-white, 80%);
-$iui-color-grayscale-dark: mix($iui-color-grayscale, $iui-color-white, 80%);
+$iui-color-destructive-lightest: lighten($iui-color-destructive, 50%);
+$iui-color-callout-lightest: lighten($iui-color-destructive, 50%);
+$iui-color-compliment-lightest: lighten($iui-color-compliment, 50%);
+$iui-color-constructive-lightest: lighten($iui-color-destructive, 50%);
+$iui-color-primary-lightest: lighten($iui-color-primary, 50%);
+$iui-color-grayscale-lightest: lighten($iui-color-grayscale, 70%);
 
 // implimentations
 
