--- a/site/themes/inboxr/landing.twig
+++ b/site/themes/inboxr/landing.twig
@@ -39,13 +39,81 @@
 </head>
 
 <body>
+    <header>
+      <div class="wrapper">
+        <div class="layout">
+          <div class="header-logo">
+            <img src="/assets/images/inboxr-white.svg" />
+          </div>
+          <div class="header-navigation">
+            <ul>
+              <li><a href="#">blog</a></li>
+              <li><a href="#">about</a></li>
+              <li><a href="#">privacy</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
 
-    <section>
-        main bit
+    <section class="author">
+      <div class="wrapper">
+
+        <h2>About the author</h2>
+        <div class="layout">
+          <div class="photo">
+            <div class="photo-container">
+              <img src="/assets/images/steven-mansfield.jpg" >
+            </div>
+          </div>
+          <div class="content">
+            <h3>Steven Mansfield</h3>
+            <p>Email designer, builder and game changer.</p>
+          </div>
+          <div class="social">
+            behance / twitter etc
+          </div>
+        </div>
+      </div>
     </section>
 
+    <section class="subscribe">
+      <div class="wrapper">
+
+        <h2>Feed your brain</h2>
+        <div class="layout">
+          <div class="content">
+            <p>We all know that monday mornings can be hard.</p>
+            <p>What we at INBOXR suggest is to get something to look forward to.</p>
+            <p>Sign up to our newsletter and you'll get some great stuff direct to your mailbox.</p>
+
+          </div>
+          <div class="form">
+            <form>
+              <label>Email address</label>
+              <input type="text" placeholder="name@email.com" />
+              <button>Get your portion!</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <footer>
-        footer
+      <div class="wrapper">
+        <div class="layout">
+          <div class="footer-logo">
+            <img src="/assets/images/inboxr-grey.svg" />
+          </div>
+          <div class="footer-navigation">
+            <ul>
+              <li><a href="#">blog</a></li>
+              <li><a href="#">about</a></li>
+              <li><a href="#">privacy</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </footer>
 </body>
 </html>
